feat(app): the owner deletes a field
